# seedimg

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.md  addnotice.sh  breaking_changes.txt  gcc7_filesystem_fix.py  grayscale_avg_kernel.clh  grayscale_lum_kernel.clh  rotate_hue_kernel.clh  seedimg.sln  simple_build.sh
.github/workflows/: cmake.yml
example/: CMakeLists.txt  example.vcxproj  example.vcxproj.filters  jpeg-test.cpp  jpeg-test.hpp  main.cpp  packages.config  png-test.cpp  png-test.hpp  rawviol.seedimg  seedimg-autodetect.cpp  seedimg-autodetect.hpp  webp-test.hpp
include/: seedimg-autodetect.hpp  seedimg-extras.hpp  seedimg-streams.hpp  seedimg-subimage.hpp  seedimg-utils.hpp  seedimg.hpp
include/seedimg-filters/: ocl-singleton.hpp  seedimg-filters-cconv.hpp  seedimg-filters-core.hpp  seedimg-filters-filterchain.hpp  seedimg-filters-ocl.hpp
include/seedimg-formats/: seedimg-bmp.hpp  seedimg-farbfeld.hpp  seedimg-irdump.hpp  seedimg-jpeg.hpp  seedimg-png.hpp  seedimg-tiff.hpp  seedimg-webp.hpp
include/seedimg-modules/: farbfeld.hpp  formats.hpp  irdump.hpp  jpeg.hpp  modules-abc.hpp  seedimg-jpeg.hpp  seedimg-png.hpp  seedimg-tiff.hpp  seedimg-webp.hpp
playground/: CMakeLists.txt  bibe.tiff  jat.ff  main.cpp
playroom/: CMakeLists.txt  main.cpp  meson.build
playroom/playground/: CMakeLists.txt  main.cpp
scripts/: FindWebP.cmake  gcc7_filesystem_fix.py  gcc7_filesystem_fixture.sh  genLUT_ycbcr.py  genLUT_ycbcr.sh  make_ctests.py  stringify_cl.py  stringify_cl.sh
seedimg/: CMakeLists.txt  seedimg-core.h  seedimg.cpp  seedimg.hpp  seedimg.vcxproj  seedimg.vcxproj.filters
seedimg-autodetect/: CMakeLists.txt  seedimg-autodetect.cpp  seedimg-autodetect.hpp
seedimg-farbfeld/: CMakeLists.txt  seedimg-farbfeld.cpp  seedimg-farbfeld.hpp
seedimg-filters/: CMakeLists.txt
seedimg-filters-core/: CMakeLists.txt  blend.cpp  blur.cpp  brightness.cpp  convolution.cpp  crop.cpp  grayscale.cpp  histogram.cpp  invert.cpp  kernelfuncs.cpp  rotate_hue.cpp  rotate_mirror.cpp  seedimg-filters-core.cpp  seedimg-filters-core.hpp  seedimg-filters-core.vcxproj  seedimg-filters-core.vcxproj.filters
seedimg-filters/seedimg-filters-core/: CMakeLists.txt  blend.cpp  (+8 more)
seedimg-filters/seedimg-filters-ocl/: CMakeLists.txt  rotate-hue-ocl.cpp  seedimg-filters-ocl.hpp
seedimg-filters/seedimg-filters-ocl/cl_kernels/: rotate_hue_ocl.cl
seedimg-format-farbfeld/: CMakeLists.txt  farbfeld.cxx  farbfeld.hxx
seedimg-formats/: CMakeLists.txt
seedimg-irdump/: CMakeLists.txt  irdump.cpp  irdump.h
seedimg-jpeg/: CMakeLists.txt  packages.config  seedimg-jpeg.cpp  seedimg-jpeg.hpp  seedimg-jpeg.vcxproj  seedimg-jpeg.vcxproj.filters
seedimg-png/: CMakeLists.txt  packages.config  seedimg-png.cpp  seedimg-png.h  seedimg-png.hpp  seedimg-png.vcxproj  seedimg-png.vcxproj.filters
seedimg-utils/: CMakeLists.txt  utils.cpp  utils.hpp
seedimg-webp/: CMakeLists.txt  packages.config  seedimg-webp.cpp  seedimg-webp.hpp  seedimg-webp.vcxproj  seedimg-webp.vcxproj.filters
src/: CMakeLists.txt
src/seedimg-autodetect/: CMakeLists.txt  seedimg-autodetect.cpp
src/seedimg-extras/: CMakeLists.txt  seedimg-extras.cpp
src/seedimg-filters/seedimg-filters-ocl/: CMakeLists.txt  apply-mat-ocl.cpp  grayscale-ocl.cpp  hsv-ocl.cpp  init-ocl-singleton.cpp  ocl-singleton.cpp  ocl-singleton.hpp  rgb-ocl.cpp  rotate-hue-ocl.cpp
src/seedimg-filters/seedimg-filters-ocl/cl_kernels/: grayscale_avg_kernel.clh  grayscale_lum_kernel.clh  rotate_hue_kernel.clh  stringify_cl.py
src/seedimg-filters/seedimg-filters-ocl/cl_kernels/cconv/: hsv2rgb_kernel.clh  rgb2hsv_kernel.clh
src/seedimg-filters/seedimg-filters-ocl/cl_kernels/filters/: apply_mat_kernel.clh  grayscale_avg_kernel.clh  rotate_hue_kernel.clh
src/seedimg-filters/seedimg-filters-ocl/cl_kernels/kernel_sources/: grayscale_avg_ocl.cl  grayscale_lum_ocl.cl  rotate_hue_ocl.cl
src/seedimg-filters/seedimg-filters-ocl/cl_kernels/kernel_sources/cconv/: hsv2rgb_ocl.cl  rgb2hsv_ocl.cl
src/seedimg-filters/seedimg-filters-ocl/cl_kernels/kernel_sources/filters/: apply_mat_ocl.cl  grayscale_avg_ocl.cl  grayscale_lum_ocl.cl
src/seedimg-formats/: CMakeLists.txt
src/seedimg-formats/seedimg-bmp/: CMakeLists.txt  seedimg-bmp.cpp
src/seedimg-formats/seedimg-farbfeld/: CMakeLists.txt  seedimg-farbfeld.cpp
src/seedimg-formats/seedimg-irdump/: seedimg-irdump.cpp
src/seedimg-formats/seedimg-jpeg/: CMakeLists.txt  seedimg-jpeg.cpp
src/seedimg-formats/seedimg-png/: CMakeLists.txt  add_zlib_include_dir.cmake  seedimg-png.cpp
src/seedimg-formats/seedimg-tiff/: CMakeLists.txt  seedimg-tiff.cpp
src/seedimg-formats/seedimg-webp/: CMakeLists.txt  seedimg-webp.cpp
src/seedimg-formats/seedimg-webp/libwebp-1.1.0/: CMakeLists.txt
tests/: .gitattributes  .gitignore  CMakeLists.txt  make_ctests.py  png-test.hpp  simple_build.bat  test-filters-core.cpp  webp-test.hpp
tests/example/: main.cpp
tests/include/: seedimg-autodetect.hpp
tests/include/seedimg-filters/: seedimg-filters-cconv.hpp
tests/include/seedimg-formats/: seedimg-png.hpp
tests/src/: CMakeLists.txt
tests/src/seedimg/: CMakeLists.txt  seedimg.cpp
tests/src/seedimg-filters/seedimg-filters-cconv/: rgb.cpp
tests/src/seedimg-filters/seedimg-filters-core/: brightness.cpp  convolution.cpp  crop.cpp
tests/src/seedimg-filters/seedimg-filters-ocl/: CMakeLists.txt  grayscale-ocl.cpp  init-ocl-singleton.cpp  ocl-singleton.hpp  rotate-hue-ocl.cpp
tests/src/seedimg-filters/seedimg-filters-ocl/cl_kernels/: grayscale_avg_kernel.clh  grayscale_lum_kernel.clh  stringify_cl.py
tests/src/seedimg-filters/seedimg-filters-ocl/cl_kernels/kernel_sources/: rotate_hue_ocl.cl
tests/src/seedimg-formats/seedimg-farbfeld/: seedimg-farbfeld.cpp
tests/src/seedimg-formats/seedimg-irdump/: CMakeLists.txt  seedimg-irdump.cpp
tests/src/seedimg-formats/seedimg-jpeg/: CMakeLists.txt
tests/src/seedimg-formats/seedimg-tiff/: seedimg-tiff.cpp
tests/src/seedimg-formats/seedimg-webp/: CMakeLists.txt
tests/src/seedimg-utils/: CMakeLists.txt  seedimg-utils.cpp
tests/tests/: CMakeLists.txt
(+65 files in other folders)
